# HiDex

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  TODO.md  design.md  mcts.h  points.csv  references.md
action_integrator/: CMakeLists.txt  about.md  action_integrator.cpp  output_file.csv  setup.yaml
data/: box_halflength_50.csv  cylinder_r1_h1.csv  ellipsoid_unit_semi_axis.csv  test_csv.csv
data/bookshelf/: batch.yaml  output.csv  setup.yaml
data/corner_pivot/: output.csv  setup.yaml
data/ddhand/: config.yaml  cube_surface_contacts_2D_100.csv  cube_surface_contacts_2D_40.csv  cube_surface_contacts_peg_in_hole_side.csv  cube_surface_contacts_peg_out.csv  cube_surface_contacts_push_lever.csv  dex_insert_setup.yaml  flip_pinch_setup.yaml  peg_in_hole_side_setup.yaml  peg_in_hole_up_setup.yaml  peg_out_setup.yaml  push_lever_setup.yaml  simple_setup.yaml
data/ddhand_flip_pinch/: setup.yaml
data/ddhand_occluded_grasp/: setup.yaml
data/ddhand_peg_in_hole_side/: setup.yaml
data/ddhand_peg_in_hole_upward/: setup.yaml
data/ddhand_push_lever/: setup.yaml
data/delta_array/: config.yaml  cube_ouput.csv  cube_rotate180_plan.csv  cube_setup.yaml  cube_surface_contacts_2D.csv  inhand_cube_setup.yaml  inhand_mesh_setup.yaml  mesh_ouput.csv  mesh_setup.yaml  output.csv  planar_manipulation_setup.yaml  table_cube_setup.yaml
data/env_bookshelf/: setup.yaml
data/env_peg/: setup.yaml
data/env_pick_card/: output.csv  setup.yaml
data/env_reorient/: output.csv  setup.yaml
data/inhand/: batch.yaml  output.csv  setup.yaml
data/inhand_all/: output.csv  setup.yaml
data/inhand_flange/: box_halflength_1.csv  setup.yaml
data/inhand_goal_finger_locations/: hammer.csv  hammer_200.csv  setup.yaml
data/obstacle/: batch.yaml  output.csv  setup.yaml
data/peg_out_hole/: batch.yaml  output.csv  setup.yaml
data/pick_card/: batch.yaml  output.csv  setup.yaml  unit_cube_surface_contacts.csv
data/placedown/: output.csv  setup.yaml
data/pushing/: batch.yaml  output.csv  setup.yaml
data/pushing_all_dir/: batch.yaml  setup.yaml
data/pushing_x/: batch.yaml  setup.yaml
data/reorient/: batch.yaml  output.csv  output_one_finger_pivoting.csv  setup.yaml  unit_cube_surface_contacts.csv
data/reorient_quasidynamic/: output.csv  setup.yaml
data/template_task/: batch.yaml  setup.yaml
data/test_cmg_bookshelf/: surface_contacts.csv
data/test_cmg_cube_reorient90/: surface_contacts.csv
data/test_cmg_peg/: surface_contacts.csv
data/test_cmg_pick_card/: surface_contacts.csv
data/test_cmg_pushing/: surface_contacts.csv
data/test_cmg_stairs/: surface_contacts.csv
data/test_cmg_wall/: surface_contacts.csv
data/test_finger_contact/: environment_contact_mode_trajectory.csv  environment_contact_trajectory.csv  object_pose_trajectory.csv  surface_contacts.csv
data/test_inhand_simplest/: apple.stl
data/wall/: batch.yaml  output.csv  setup.yaml
data/wholehand/: setup.yaml
ddhand/: CMakeLists.txt  ddhand_dex_insert.cpp  ddhand_flip_pinch.cpp  ddhand_peg_in_hole_side.cpp  ddhand_peg_in_hole_up.cpp  ddhand_peg_out_hole.cpp  ddhand_push_lever.cpp  ddhand_setup.h  ddhand_simple.cpp
delta_array/: CMakeLists.txt  delta_array.cpp  visualization.h
examples_env/: CMakeLists.txt  bookshelf.cpp  peg.cpp  pick_card.cpp  reorient.cpp
examples_inhand/: CMakeLists.txt  inhand_all.cpp  inhand_flange.cpp  inhand_goal_finger_locations.cpp  inhand_simplest.cpp  visualization.h
games/: CMakeLists.txt  finger_contact.cpp  finger_contact.h
general_planner/: CMakeLists.txt  batch_config_template.yaml  collect_data_in_batch.cpp  ddhand_setup.h  hidex_planner.cpp  hidex_trajectory_visualizer.cpp  readme.md  setup.yaml  setup_template.yaml  test_general.cpp  turn_trajectory_into_dataset.cpp
general_planner/batch_test/: setup.yaml
mechanics/: CMakeLists.txt  force_check.cpp  force_check.h  mechanics.cpp  mechanics.h  mode_utils.h
mechanics/contacts/: contact_mode_enumeration.cpp  contact_mode_enumeration.h
mechanics/dart_utils/: dart_utils.cpp  dart_utils.h
mechanics/manipulators/: DartDDHandScalable.h  DartDeltaManipulator.cpp  DartPointManipulator.cpp  DartPointManipulator.h
mechanics/utilities/: combinatorics.cpp  combinatorics.h  io.cpp  sample.cpp  sample.h
mechanics/worlds/: DartWorld.cpp  DartWorld.h
python/: 3_finger_cylindar_l_2_r_1.csv  collect_dataset.py  collect_inhand_all_data.py  collect_inhand_goal_finger_data.py  collect_pushing_dataset.py  csv_process.py  draw_barplot.py  fit_logistic_function.py  generate_2d_box_surface_points.py  modified_3_finger_cylindar_l_2_r_1.csv  points.csv  trajectory_to_dataset_batch.py  visualize_trajectory_in_batch.py
python/data_process/: calculate_statistics.py
search/: base.h  level1.h  level1mcts.h  level2.h  level2baseline.h  level2fp.h  level2mcts.h
src/: CMakeLists.txt
src/mechanics/: force_check.cpp  force_check.h  mechanics.h  mode_utils.cpp  mode_utils.h
src/search/: base.h  level1.h  level1mcts.h  level2fp.h  level2mcts.h
src/tasks/: ddhand_setup.h  rrt.h  (+11 more)
tasks/: cmg_task.cpp  cmg_task.h  constrained_manipulation.h  inhand_task.cpp  inhand_task.h  integration_utils.h  rewards.h  setup.cpp  setup.h  task.cpp  task.h  test_task_l1.h  visualization.h
test_wholehand/: CMakeLists.txt  box_surface_opt.cpp  contact_config_examples.cpp  n_samples_sdf.cpp  object_surface_opt.cpp  sample_configs.cpp  sample_n_surface_opt.cpp  test_ik.cpp  test_sdf.cpp
tests/: CMakeLists.txt  cmg_bookshelf.cpp  cmg_cube_reorient90.cpp  cmg_peg.cpp  cmg_pick_card.cpp  cmg_pushing.cpp  cmg_stairs.cpp  cmg_wall.cpp  compare_2nd_level.cpp  delta_array.cpp  inhand_3finger_palm.cpp  inhand_pen.cpp  inhand_simplest.cpp  test_action_idx.cpp  test_csv.cpp  test_discrete_sample.cpp  test_exp_map.cpp  test_force.cpp  test_forward_integration.cpp  test_hand_collision.cpp  test_level1.cpp  test_level1_cmg.cpp  test_path_join.cpp  test_quasidynamic.cpp  test_rewards.cpp  test_sdf_samples.cpp  test_task_class.cpp  test_task_inhand.cpp  test_time.cpp  test_wholehand.cpp  test_wholehand_sdf.cpp  test_wholehand_task.cpp  visualization.h
(+143 files in other folders)
